# APITAF

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: main.yml
11/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
11/widgets/: duration-trend.json  duration.json  executors.json  severity.json  status-chart.json  summary.json
12/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: duration-trend.json  history-trend.json  history.json
12/widgets/: categories-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
13/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
13/export/: influxDbData.txt  prometheusData.txt
13/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
13/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
14/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
clients/: api_client.py  base_resource.py  posts.py  users.py
data/: config.yaml  schemas.py  schemas.yaml
last-history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
tests/: conftest.py  test_posts.py  test_users.py
(+359 files in other folders)
