[tool.poetry]
name = "apitaf"
version = "0.1.0"
description = "Demo api test automation"
authors = ["Homy <honta.id@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pipreqs = "^0.4.13"
pytest = "^7.4.0"
jsonschema = "^4.18.1"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "clients", "data"
]